# Automated_Job_Apps

./: pyproject.toml
.jac/data/: server.db  server.db-shm  server.db-wal
