[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automatic-job-applications"
version = "0.1.0"
description = "Discover jobs, apply with saved profile, log locally, sync to Google Sheets"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer[all]>=0.12",
    "playwright>=1.40",
    "google-api-python-client>=2.120",
    "google-auth>=2.29",
]

[project.scripts]
job-applier = "job_automation.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
